Fix layout issues, add sort ascending/descending

--- a/frontend/src/components/bars/BarsList.scss
+++ b/frontend/src/components/bars/BarsList.scss
@@ -11,6 +11,7 @@
   .name {
     font-weight: 600;
     margin-right: 10px;
+    text-align: right;
   }
 
   .total {
